# compliance_report

./: Dockerfile  pyproject.toml  requirements.txt
.astro/blueprint/schemas/: jupyter_notebook_blueprint.schema.json
.astro/templates/: jupyter_notebook.py  snowflake_query_blueprint.schema.json
dags/: bet_transactions_report.py  betting_patterns_ml.dag.yaml  high_rollers_analysis.dag.yaml  yaml_loader.py
dags/configs/: high_rollers_analysis.dag.yaml
dags/templates/: snowflake_query.py
include/sql/bet_transactions_report/: betting_patterns.sql  daily_summary.sql  data_quality.sql  high_value_transactions.sql  hourly_volume.sql  summary_statistics.sql
